--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <h1>Bienvenidos a Mi Blog de Vacaciones</h1>
   </header>
   <nav>
-    <ul>
-      <li><a href="https://google.com">Inicio</a></li>
-      <li><a href="https://google.com">Destinos</a></li>
-      <li><a href="https://google.com">Blog</a></li>
-      <li><a href="https://google.com">Contacto</a></li>
+    <ul class="menu">
+      <li><a class="menuElement" href="https://google.com">Inicio</a></li>
+      <li><a class="menuElement" href="https://google.com">Destinos</a></li>
+      <li><a class="menuElement" href="https://google.com">Blog</a></li>
+      <li><a class="menuElement" href="https://google.com">Contacto</a></li>
     </ul>
   </nav>
   <main>
@@ -35,10 +35,10 @@
     </article>
     <section>
       <h2>Próximos destinos</h2>
-      <ul>
-        <li><img src="images/iceland.jpg" alt="Iceland" class="imagesOfFutureTravels"></li>
-        <li><img src="images/japan.jpg" alt="Japan" class="imagesOfFutureTravels"></li>
-        <li><img src="images/australia.jpg" alt="Australia" class="imagesOfFutureTravels"></li>
+      <ul class="imageSection">
+        <li><img class="images" src="images/iceland.jpg" alt="Iceland"></li>
+        <li><img class="images" src="images/japan.jpg" alt="Japan"></li>
+        <li><img class="images" src="images/australia.jpg" alt="Australia"></li>
       </ul>
     </section>
   </main>
