Add more copy and upgrade css

--- a/index.html
+++ b/index.html
@@ -25,20 +25,49 @@
     </ul>
   </nav>
   <main>
-    <article>
-      <h2>Mis vacaciones en París</h2>
-      <p>Breve descripción de tu viaje a París.</p>
-    </article>
-    <article>
-      <h2>Mis vacaciones en Nueva York</h2>
-      <p>Una breve descripción de tu viaje a Nueva York.</p>
-    </article>
+    <section class="sectionParalel">
+      <article class="article">
+        <h2>Mis vacaciones en París</h2>
+        <p>Mi viaje a París fue mágico. Me quedé impresionado por la majestuosidad de la Torre Eiffel y las vistas
+          panorámicas que
+          ofrecía. Pasear por las románticas calles de Montmartre fue como adentrarse en una película. La Basílica del
+          Sagrado
+          Corazón me dejó sin palabras con su belleza y las vistas de la ciudad. Explorar el Museo del Louvre fue una
+          experiencia
+          inolvidable, especialmente al ver la famosa Mona Lisa en persona. Los Jardines de Luxemburgo fueron el lugar
+          perfecto
+          para relajarme y disfrutar del aire fresco. Y, por supuesto, no puedo olvidar los deliciosos sabores de la
+          cocina
+          francesa. ¡Fue un viaje que nunca olvidaré!</p>
+      </article>
+      <article class="article">
+        <h2>Mis vacaciones en Nueva York</h2>
+        <p>Mi viaje a Nueva York fue increíble. Me quedé impresionado por la majestuosidad de los rascacielos y la
+          energía vibrante
+          de la ciudad. Caminar por las calles bulliciosas de Times Square fue como estar en el centro del mundo. La
+          Estátua de la
+          Libertad me dejó sin aliento con su grandeza y su significado histórico. Explorar el Museo Metropolitano de
+          Arte fue una
+          experiencia fascinante, especialmente al ver las increíbles obras maestras en persona. Central Park fue un
+          oasis de
+          tranquilidad en medio del ajetreo y el bullicio de la ciudad.</p>
+      </article>
+    </section>
     <section>
-      <h2>Próximos destinos</h2>
+      <h2 class="basicTitle">Próximos destinos</h2>
       <ul class="imageSection">
-        <li><img class="images" src="images/iceland.jpg" alt="Iceland"></li>
-        <li><img class="images" src="images/japan.jpg" alt="Japan"></li>
-        <li><img class="images" src="images/australia.jpg" alt="Australia"></li>
+        <li>
+          <h3 class="basicTitle">Iceland</h3>
+          <img class="images" src="images/iceland.jpg" alt="Iceland">
+        </li>
+        <li>
+          <h3 class="basicTitle">Japan</h3>
+          <img class="images" src="images/japan.jpg" alt="Japan">
+        </li>
+        <li>
+          <h3 class="basicTitle">Australia</h3>
+          <img class="images" src="images/australia.jpg" alt="Australia">
+        </li>
       </ul>
     </section>
   </main>
